--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dataBinding{
+        enabled true
+    }
+
     useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
 
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.github.MasayukiSuda:EasingInterpolator:v1.3.2'
     implementation 'androidx.appcompat:appcompat:1.5.1'
